# mothBot

./: .gitignore  ARCHITECTURE.md  PIPECAT_AGENT_PLAN.md  PIPECAT_IMPLEMENTATION_SUMMARY.md  PIPECAT_QUICKSTART.md  README.md  __init__.py  app.py  requirements.txt  test_engine.py
core/: __init__.py  events.py  executor.py  expressions.py  generator.py
plans/: __init__.py  examples.py  schema.py
toolCallAgent/: README.md
toolCallAgent/client/: env.example  package-lock.json  package.json
toolCallAgent/client/src/: config.ts
toolCallAgent/client/src/app/: globals.css  layout.tsx  page.tsx
toolCallAgent/client/src/app/api/skills/: route.ts
toolCallAgent/client/src/app/api/skills/[skillId]/: route.ts
toolCallAgent/client/src/app/components/: App.tsx  ChatMessage.tsx  SpaceshipWireframe.tsx
toolCallAgent/client/src/app/evals/: layout.tsx  page.tsx
toolCallAgent/client/src/app/skills/: layout.tsx  page.tsx
toolCallAgent/server/: .env.example  bot.py  env.example  pyproject.toml  skills_api.py  tools.py  weave_tracing.py
tools/: __init__.py  examples.py  registry.py
